--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      </nav>
     </header>
 
-    <main>
+    <main class="main">
       <div style="margin-top: 20px;">
         <form action="/search" method="post">
           <label for="name">Введите имя:</label>
