--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
       <p>&copy; 2024 shota ch.- Ремонт Бытовой Техники</p>
           <nav aria-label="breadcrumb">
             <ul>
