Edit footer at table.html

--- a/table.html
+++ b/table.html
@@ -378,7 +378,7 @@
 
         </main>  
 
-        <footer>
+        <footer class="footer">
             <p>&copy; 2024 shota ch.- Ремонт Бытовой Техники</p>
                 <nav aria-label="breadcrumb">
                   <ul>
